--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Weather App</title>
 </head>
 <body class="container">
-    <div class="formen d-flex justify-content-center">
-        <form class="row" action="/" method="post">
+    <div class="formen">
+        <form class="row justify-content-center" action="/" method="post">
             <div class="col-lg-4">
             <label for="inputCity" class="form-label">City</label>
             <input type="text" class="form-control" id="inputCity" name="cityName" placeholder="Ex. Uppsala">
